# alsa-lib

./: configure.ac
src/conf/cards/: HDA-Intel.conf
src/conf/ucm/: Makefile.am
src/conf/ucm/byt-max98090/: Makefile.am
src/conf/ucm/byt-rt5640/: Makefile.am
src/conf/ucm/bytcht-da7213/: Makefile.am
src/conf/ucm/bytcht-nocodec/: Makefile.am
src/conf/ucm/bytcht-pcm512x/: Makefile.am
src/conf/ucm/cht-bsw-rt5672/: Makefile.am
src/conf/ucm/chtmax98090/: Makefile.am
src/conf/ucm/sof-bxtda7219max/: Makefile.am
src/conf/ucm/sof-bytcht-da7213/: Makefile.am
src/conf/ucm/sof-bytcr-rt5640/: Makefile.am
src/conf/ucm/sof-bytcr-rt5651/: Makefile.am
src/conf/ucm/sof-cht-bsw-rt5672/: Makefile.am
src/conf/ucm/sof-chtmax98090/: Makefile.am
src/conf/ucm/sof-chtrt5645/: Makefile.am
src/pcm/: Makefile.am  pcm.c  pcm_fallback.c  pcm_symbols.c
